fixed landing page spacing

--- a/app/global.css
+++ b/app/global.css
@@ -33,6 +33,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: var(--ff);
   background-color: var(--bg-dark);
   color: var(--fg-light);
@@ -54,7 +56,8 @@ body::before {
 }
 
 #root {
-  min-height: 100vh;
+  flex: 1;
+  display: flex;
 }
 
 h1 {
