--- a/app/style.module.css
+++ b/app/style.module.css
@@ -2,9 +2,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 100%;
+  justify-content: center;
+  width: 100%;
 }
 
 .heroImage {
@@ -18,7 +18,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0px;
 }
 
 /* Background circles  */
